<resources>
    <string name="app_name">MyAppPoemas</string>
    <string name="Poema1">
        Volcán del agua

Sobre la gran muralla americana
altivo torreón, vecino al cielo,
su cúspide levanta soberana,
a do jamas osó llevar su vuelo
la reina de las aves atrevida
que en la cuna de Júpiter anida.
\n\n
Gigante es Almolonga entre los montes,
fuerte, soberbio, grande entre los grandes
¡Cuál domina millares de horizontes!
¡Cómo huella la cumbre de los Andes!
¡Cómo mira a su falda avasalladas,
de cien montes las cimas encumbradas!
\n\n
Cuando animado el pensador profundo
de la sublime inspiración divina
quiere ver a sus pies el ancho mundo
y al vértice elevado se encamina,
¡cómo va sus ideas ensalzando
al par que va subiendo y va mirando!
\n\n
Allá en su patria misma el fiero rayo
oye bronco tronar bajo su planta:
y el sol que el monte hiere de soslayo
y la nube que lenta se levanta,
y su sombra contempla, que distinta
cual espectro en la atmósfera se pinta.
\n\n
Verde, risueña, alegre, la campaña
que mil arroyos cruzan argentinos
divisa, y la ciudad y la cabaña,
y el cerro con sus bosques y sus pinos,
el lago de cristal, la fértil vega
y el río transparente que la riega.
\n\n
Mira a un lado el Océano poderoso
cuyas ondas azules va lamiendo
la inmóvil planta al terrenal coloso.
Al Izalco, por otro mira ardiendo,
y allá en una comarca más distante
el Momotombo mira fulminante.
\n\n
Y sin saciar su vista ni su mente
por estrecho sendero y escarpado
baja de la montaña lentamente
el sabio a sus ideas entregado;
tal virtud, tal poder, tal fuerza encierra
¡aquel gran monumento de la tierra!
\n\n
Se vuelve y ve de la montaña erguida
en la cintura atlética azulada
cándida zona en derredor ceñida,
y la sublime cúpula adornada
de suspendida nubecilla leve
deshecha y pura y blanca como nieve.
\n\n
Y el filósofo en éxtasis admira
las obras portentosas de natura
y quiere comprenderlas y suspira
al ver su presunción y su locura;
y su saber y su razón humilla
ante el autor de tanta maravilla.
\n\n
    </string>

    <string name="Poema2">
        Una vieja soltera se moría
y sin cesar pedía
al confesor que estába cerca de ella
la palma y la corona de doncella;
y su afán era tanto
que era capaz de impacientar a un santo,
aunque no lo mostrase el padre cura,
hombre muy ponderable de dulzura.
\n\n
Una de tantas veces, sin embargo,
que estába repitiendole el encargo
nuestra virgen anciana
por centésima vez en la mañana,
aburrido el pastor de aquella tema
a la vieja le dijo con gran flema:
«Mire, Tía Pascuala, que la cosa
es algo peligrosa,
pues si su doncellez no es verdadera,
y la van a enterrar de ésta manera
cubierta con insignias virginales,
el menor de sus males
será ir al infierno en cuerpo y alma
tan sólo por la culpa de la palma;
mírese bien en ello, madre mía,
y no le salga cara su porfía.’
«El Señor, le responde, me és testigo
que no reza conmigo
éso que usted acaba de decirme.
¡Si por algo no temo yo el morirme…!
Ello…en fin…es del todo…indiferente,
Pero…mejor será…porque la gente
no vea…vanidad en mi persona,
que me entierren sin palma ni corona’.
        \n\n
    </string>
    <string name="Poema3">
        Yo pienso en ti, tú vives en mi mente
sola, fija, sin tregua, a toda hora,
aunque tal vez el rostro indiferente
no deje reflejar sobre mi frente
la llama que en silencio me devora.
En mi lobrega y yerta fantasía
brilla tu imagen apacible y pura,
como el rayo de luz que el sol envía
a traves de una boveda sombria
al roto mármol de una sepultura.
Callado, inerte, en estupor profundo,
mi corazón se embarga y se enajena
y allá en su centro vibra moribundo
cuando entre el vano estrépito del mundo
la melodía de tu nombre suena.
Sin lucha, sin afán y sin lamento,
sin agitarme en ciego frenesí,
sin proferir un solo, un leve acento,
las largas horas de la noche cuento
¡y pienso en ti!
\n\n
    </string>
    <string name="Espacio">
        \n\n\n\n\n\n
    </string>

    <string name="Poema4">
        Encontré el sol detrás de tus ojos,
Nubló mi vista tus pupilas,
Parece que me manejas a tu antojo,
Tienes a mi corazón haciendo fila,
Para colarme en un pequeño espacio,
Dentro de tu alma y tu conciencia ,
Ganarme tu amor tan despacio,
Y así pensar que bella coincidencia,
Te encontré en el momento exacto,
Cuando nuestros corazones están en sintonía,
Donde te enamoras con un gesto o un acto,
un beso, un abrazo, una flor o un buenos días.
Todo lo que un día había soñado,
Lo encontré en ti y en tu sonrisa,
Me considero el más afortunado,
Todos mis sueños tu ya los eclipsas.
        \n\n

    </string>

    <string name="Poema5">
        Tú me pides
un poema
y yo te digo:
amor,
si tú lo eres.
Cada parte tuya
es una estrofa
y todo el conjunto,
poesía.
Para escribirte
habría que volver
a la poesía clásica,
habría que volver
gimnastas a los versos.
Escribirte
en verso libre
no es correcto
y yo no puedo
escribir
a la manera clásica.
Mejor déjame
entonces plagiarte
con mis besos,
déjame sentir
toda la resonancia
de la estrofa,
pues de todos modos,
amor,
si tú eres el poema,
yo soy el poeta.
        \n\n
    </string>

    <string name="Poema6">
        Es un joven desgraciado
cómo una rosa marchita,
frescura y color le quita
el sol que la ha marchitado.
\n\n
Apenas la sombra queda
de la forma que perdió:
Ya el olor se disipó,
no hay quién volverselo pueda.
\n\n
Huye de todo consuelo,
que el infeliz no le tiene:
Ni esperanza le mantiene,
éste grato don del cielo.
\n\n
En su profundo estupor
y desesperada calma,
ya no lisonjea su alma
ni la gloria ni el honor.
\n\n
Cómo un volcán abrazado
su adolescencia pasará,
¡cuán violento palpitará
su corazón arrojado!
\n\n
Hoy para él todo está muerto
que el corazón arrogante
cayó frío en un instante
y de tristeza cubierto.
\n\n
Otro hombre jamás ha habido
que algún bien no haya gozado;
más él siempre desgraciado
y nunca dichoso ha sido.
\n\n
La esperanza ni una vez
vino a alimentarle un rato;
no tendrá un recuerdo grato
con qué aliviar su vejez.
\n\n
Mírale, tierna doncella,
mira aquella alma postrada;
que enciende una tu mirada
la vida que aún resta en ella.
\n\n
Para la piedad naciste,
tu misión es la ternura;
no seas con él tan dura;
velo: casi ya no existe.
\n\n
Más ¿rehúsas doncella hermosa,
dar fin a tan cruel tormento?
¿No te mueve ni un momento
su desdicha lastimosa?
\n\n
Ya su mal está calmado
¡Oh muerte! ¡Oh nada desierta!
abre, eternidad, tu puerta
para que entre un desgraciado
        \n\n
    </string>


    <string name="Poema7">
        Alas, tengo alas en la lengua,
mi cuerpo está cubierto de alas,
son miles de alas que me crecen,
una multitud de pequeñas alas sonoras.
Mis palabras son alas blancas,
alas, alas de espuma o nube,
alas tremendas que me cubren, que me laceran.
Y sin embargo no vuelo con mis alas.
Alas de mis ángeles,
dulces alas que me renuevan,
alas tristes con que me envuelvo,
aladas alas por las que vivo.
Soy un árbol de alas
con alas que me brotan como hojas,
con hojas muertas que me vuelan como alas.
Soy un mar de alas,
un cielo de alas que resuenan.
Alas de mi nombre,
sinfonía de alas en mí misma.
¡Cómo suenan mis alas!
¡Cómo intentan mis alas batir el vuelo!
¿Cómo estoy en la tierra con mis alas a cuestas?
¿Cómo estoy en el viento sin volar con mis alas?
Soy un ala gigante,
soy millones de alas minúsculas,
soy un porvenir, un destino de alas,
y junto al infinito de mis alas peregrinas
pronuncio esta oración de alas aleteantes
para redimirme en nombre de esas alas sonoras.
        \n\n

    </string>

    <string name="Poema8">
        Quetzal, mito, leyenda, humo verde,
pájaro de fuego y esmeraldas.
Copa de ajenjo y de rubíes
lanza desnuda y hoja de maíz
que corona la frente patria.
Quetzal, quetzal de leves alas,
pecho de brasa y cauda de cometa,
¡Oh, puñado de piedras preciosas por el aire,
viva la flecha de jade que cruza el horizonte!
Ayer volabas libérrimo en un bosque
sembrado de luciérnagas de júbilo y de plata,
volabas libre por un cielo claro
de quiebracajetes, geranios y maizales.
Pero el oprobio mancilló tu cauda
y puso en venta tu plumaje de oro,
¡oh, luciente suspiro de las selvas!
¡oh, aliento tangible de los bosques!
\n\n
    </string>

    <string name="Poema9">
        Orillas de Guatemala
por el ondulante campo
dos mil años por el indio
de sacro maíz sembrado
(imagen de su esperanza)
y de lágrimas regado,
noviembre, dulce fantasma
del calendario, ha pasado.
Por donde ha pasado, flores
amarillas viste el campo:
noviembre las ha esparcido
como si fuera llorando.
\n\n
Tierras de maíz y lágrimas
del viejo náhoa sonámbulo
a nuevas vidas abiertas
y con sus huesos debajo.
La ambiciosa urbe las roba
a su destino precario:
caminos, quintas, la fuerza
invasora de su tráfago.
El antiguo maíz se ha ido,
quedan los huesos debajo.
Noviembre con sus brazadas
de amarillas flores campos
orillas de Guatemala
pinta de oro año tras año.
\n\n
¿Sobre difíciles ruinas
de la urbe ambiciosa acaso
remoto día noviembre
regará flores llorando?
¡Otra vez entre rastrojos
de sueño y maíz sagrado
estas mismas pobres flores
en noviembres encantados
dirán a otros hombres nuevos
cuántos pueblos hay debajo!
\n\n
    </string>

</resources>